<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="board_activity_shared_preferences">board activity shared preferences</string>
    <string name="game_configuration_activity_shared_preferences">game configuration activity shared preferences</string>
    <string name="main_activity_shared_preferences">main activity shared preferences</string>
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="start_game">Start Game</string>
    <string name="easy">Easy</string>

</resources>
